--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.6.0",
     "@types/jest": "24.0.21",
     "@types/node": "12.12.6",
     "@types/react": "16.9.11",
